# atividade_2

./: CMakeLists.txt  README.md  package.xml
config/: ekf_odom_imu.yaml  ekf_odom_imu_gps.yaml  ekf_odom_only.yaml
launch/: odom_imu.launch  odom_imu_gps.launch  odom_only.launch  run_all_concurrent.launch  run_test.launch  simulation.launch
results/: odom_imu_gps_metrics.csv  odom_imu_gps_timeseries.csv  odom_imu_metrics.csv  odom_imu_timeseries.csv  odom_only_metrics.csv  odom_only_timeseries.csv
scripts/: gps_to_odom.py  ground_truth_odom.py  metrics_evaluator.py  plot_results.py  run_all_tests.sh
